docs/7.57/md/abenitab_oview.md
---
title: "Hints"
description: |
  -   For information about the maximum size of an internal table, see Maximum Size of Dynamic Data Objects(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmemory_consumption_2.htm). -   For information about obsolete headers of internal tables, see Internal Tables with Header(https
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_oview.htm"
abapFile: "abenitab_oview.htm"
keywords: ["select", "do", "if", "try", "data", "internal-table", "abenitab", "oview"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Internal Tables (itab)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: itab - Overview, ABENITAB_OVIEW, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggest
ion for improvement:)

itab - Overview

Internal tables provide a means of taking variable data from a fixed structure and storing it in working memory in ABAP. An internal table is a data object that contains any lines with any data type whose total is not defined statically. The data type of an internal table is a table type. As well as the line type, the table type also defines the [table category](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_category_glosry.htm "Glossary Entry") and the [table key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_key_glosry.htm "Glossary Entry").

Internal tables offer dynamic arrays and remove the task of program-driven dynamic memory management from the programmer (see [Memory Consumption of Deep Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmemory_consumption.htm)). A particularly important application for internal tables is for storing and formatting data from a database table within a program. In conjunction with [structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_objects_structure.htm), they are also the best way of defining complicated data structures in an ABAP program.

-   [itab - Table Type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_data_type.htm)
-   [itab - Selection of the Table Category](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_cat.htm)
-   [itab - Table Key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_key.htm)
-   [itab - Accessing Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_access.htm)
-   [itab - Initial Memory Requirement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_initial_mem_req.htm)
-   [itab - Line-Based Administration Costs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_key_memory.htm)

Hints

-   For information about the maximum size of an internal table, see [Maximum Size of Dynamic Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmemory_consumption_2.htm).
-   For information about obsolete headers of internal tables, see [Internal Tables with Header](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_header_line.htm).

Continue
[itab - Table Type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_data_type.htm)
[itab - Selection of the Table Category](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_cat.htm)
[itab - Table Key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_key.htm)
[itab - Accessing Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_access.htm)
[itab - Initial Memory Requirement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_initial_mem_req.htm)
[itab - Line-Based Administration Costs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab_key_memory.htm)